project/test/semantics/unit/good/input/Good04_shouldStoreAnyObjectAsValuesProperly.ty
mutable class Student {
    
    values: {
        id: Int = 38493;
    }
}

singleton class ObjectsAsValues {
    
    actions: {
        main: () -> Void = {
            val x: Student = Student;
            System#assertEquals(Student, x)
        }
    }
}
