project/test/semantics/unit/bad/input/Bad17_shouldThrowUnexpectedReturnTypeErrorInActions.ty
mutable class SomeMutableClass {

    values: {
        total: Int;
        count: Int;
        name: String = "Some name";
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
    }
    
    functions: {
        goodFunction: () -> Int = 50
    }
    
    actions: {
        goodAction: (x: Int, y: String) -> Int = {
            2
            y
            x
        }
        
        badAction: (x: Int, y: String) -> Int = {
            3
            x
            y // UnexpectedReturnTypError: String instead of Int
        }
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = Pass
    }
}
